# CUT

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ReadMe.txt  a  cmake_install.cmake  m  main.c  myprogram  sampleProgram  valgrind-out.txt
src/: analyzer.c  analyzer.h  main.c  printer.c  printer.h  queue.c  queue.h  reader.c  reader.h  sigterm.c  sigterm.h
tests/: CMakeLists.txt  test_file1.c  test_queue.c
